# Nexx-Chat

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.multi  GEMINI.md  LICENSE  MIT  Makefile  README.md  REMEDIATION_COMPLETE.md  app.py  code_review.md  code_review_recommendations.md  deployment_document.md  docker-compose.yml  docker-entrypoint.sh  fix_dockerfile.md  fix_log.md  howto_docker.md  neural_terminal.db  pyproject.toml  pyproject.toml.bak  status_2.md  status_3.md  status_4.md  status_5.md
docs/: prompt-1.md
scripts/: health_check.py  init_db.py  purge_conversations.py
src/neural_terminal/: app_state.py  config.py  main.py
src/neural_terminal/application/: cost_tracker.py  events.py  orchestrator.py  state.py
src/neural_terminal/components/: __init__.py  chat_container.py  error_handler.py  header.py  message_renderer.py  status_bar.py  stream_bridge.py  styles.py  themes.py
src/neural_terminal/domain/: exceptions.py  models.py
src/neural_terminal/infrastructure/: circuit_breaker.py  database.py  input_sanitizer.py  logger.py  logging_config.py  openrouter.py  rate_limiter.py  repositories.py  token_counter.py
tests/: conftest.py
tests/integration/: test_database.py
tests/unit/: test_app_state.py  test_circuit_breaker.py  test_code_block_cache.py  test_config.py  test_cost_tracker.py  test_events.py  test_exceptions.py  test_export.py  test_input_sanitizer.py  test_logging.py  test_models.py  test_orchestrator.py  test_rate_limiter.py  test_repositories.py  test_soft_delete.py  test_state.py  test_stream_bridge.py  test_stream_bridge_thread_safety.py  test_token_counter.py
tests/unit/components/: test_chat_container.py  test_error_handler.py  test_header.py  test_message_renderer.py  test_status_bar.py  test_styles.py  test_themes.py
