[tool.poetry]
name = "neural-terminal"
version = "0.1.0"
description = "Production-grade chatbot with OpenRouter integration"
authors = ["Developer <dev@example.com>"]
packages = [{include = "neural_terminal", from = "src"}]
readme = "README.md"
repository = "https://github.com/example/neural-terminal"
license = "MIT"

[tool.poetry.dependencies]
# pip install streamlit httpx pydantic pydantic-settings python-dotenv sqlalchemy alembic structlog tiktoken bleach markdown sqlalchemy markdown
python = "^3.11"
# Core framework
streamlit = "^1.54.0"
# HTTP client
httpx = "^0.28.1"
# Configuration
pydantic = "^2.12.5"
pydantic-settings = "^2.13.0"
python-dotenv = "^1.2.1"
# Database
sqlalchemy = "^2.0.46"
alembic = "^1.18.4"
# Logging
structlog = "^24.4.0"
# Token counting
tiktoken = "^0.12.0"
# Security
bleach = "^6.3.0"
# Markdown rendering
markdown = "^3.10.2"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.4"
pytest-asyncio = "^0.21.2"
pytest-cov = "^4.1.0"
respx = "^0.22.0"  # HTTP mocking for httpx
# Linting & Formatting
mypy = "^1.19.1"
ruff = "^0.12.12"
black = "^23.12.1"
# Type stubs
types-bleach = "^6.3.0.20251115"

[build-system]
# 2.1.3
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"

# ============================================================================
# MyPy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_configs = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = false
show_error_codes = true
show_column_numbers = true

# Per-module overrides
[[tool.mypy.overrides]]
module = "tiktoken.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "streamlit.*"
ignore_missing_imports = true

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented code)
    "PL",  # Pylint
]
ignore = [
    "E501",  # Line too long (handled by black)
    "PLR2004",  # Magic value used in comparison
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]

# ============================================================================
# Black Configuration
# ============================================================================
[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["src/neural_terminal"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
fail_under = 90
skip_covered = false
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
